# feasibility-dashboard

./: .aiexclude  .env.example  .geminiignore  .gitignore  .semgrep.yml  ARCHITECTURE.md  CLAUDE.md  COST_BUDGET.md  CUsersCarter~  Makefile  PROMPT_LIBRARY.md  PROVENANCE.md  README.md  SECURE_DEV.md  THREAT_MODEL.md  codex_shim.bat  config.yaml  debug_list_eastern_hazards.py  debug_wfs.py  debug_wfs_coords.py  debug_wfs_cql.py  describe_layer.py  diagnose_layers_full.py  due_diligence.html  feasibility_calculator.html  find_layers.py  gemini_help.txt  gitleaks.toml  index.html  layers.txt  market_scan.html  pyproject.toml  reproduction_zone_check.py  run_batch_ldrz.py  run_new_candidates.py  site-scanner.code-workspace
.agent/: skills.md
.claude/: settings.json  settings.local.json
RUNBOOKS/: api-high-latency.md  db-connection-exhaustion.md
antigravity-delegator/: .gitignore  README.md  gemini_cli.py  usage.original.json
config/: construction_costs.yaml  dual_occ_specs.yaml  feasibility_config.yaml  property_checks.yaml  quick_find_suburbs.txt  suburbs_debug.txt  suburbs_donvale_cluster.txt  suburbs_eastern.txt  suburbs_ldrz_feasible.txt  suburbs_metro_east.txt
docs/: MARKET_INTELLIGENCE.md  gis_endpoints.md
scripts/: analyze_profitability.py  auto_find_candidates.py  batch_harvest_intel.py  calculate_profit.py  check_market_data.py  check_offline_db.py  clean_duplicates.py  debug_analyze_html.py  debug_planning_access.py  debug_playwright.py  debug_scraper_html.py  find_dual_occ.py  fix_zones_format.py  generate_analysis_exports.py  harvest_intel_vpn.py  (+24 more)
(+129 files in other folders)
