[tool.poetry]
name = "feasibility-dashboard"
version = "0.1.0"
description = "Melbourne property development opportunity scanner"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
geopandas = "^0.14.0"
shapely = "^2.0.0"
pyproj = "^3.6.0"
pyyaml = "^6.0.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
rich = "^13.7.0"
requests = "^2.32.5"
playwright-stealth = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
scanner = "scanner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
